Added search and clear buttons to html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <!-- 1 Row 2 Columns (3/9 or 2/10) -->
     <div class="container">
       <div class="row">
+        <!-- Left Column: Search, clear, store -->
         <div class="col-md-3 left-column">
           <input type="text" id="userCity" />
+          <button class="search">Search</button>
+          <button class="clear">Clear History</button>
         </div>
         <div class="col-md-9 right-column"></div>
       </div>
