search button logs userInput

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="row">
         <!-- Left Column: Search, clear, store -->
         <div class="col-md-3 left-column">
-          <input type="text" id="userCity" />
+          <input type="text" id="userCity" placeholder="Enter City"/>
         </br>
             <div class="left-buttons">
             <button id="searchBtn">Search</button>
@@ -56,7 +56,9 @@
         <div class="row" id="future-weather-row"></div>
       </div>
     </div>
-    <!-- Link JQuery -->
+    <!-- Linked Moment.js  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- Linked JQuery -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
