UV index api functioning, and displayed to screen

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
           <!-- Row 1: Current weather -->
           <div class="row" id="current-weather-row">
             <!-- Column for current weather -->
-            <div class="col-md-12" id="current-display">
-              
-            </div>
+            <div class="col-md-12" id="current-display"></div>
+            
           </div>
         </div>
 
