Finished function of all APIs, styled forecast API

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
           <div class="row" id="current-weather-row">
             <!-- Column for current weather -->
             <div class="col-md-12" id="current-display"></div>
-            
-          </div>
-        </div>
 
-        <!-- Row 2: Future weather(5 days) -->
-        <div class="row" id="future-weather-row"></div>
+          </div>
+          <!-- Row 2: Forecase of 5 days -->
+          <div class="row" id="future-weather-row">
+            
+        </div>
+        </div>
       </div>
     </div>
     <!-- Linked Moment.js  -->
