--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           </div>
           <!-- Row 2: Forecase of 5 days -->
           <div class="row" id="future-weather-row">
+              <h2>5-Day Forecast</h2>
             
         </div>
         </div>
