--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 
           </div>
           <!-- Row 2: Forecase of 5 days -->
-          <div class="row" id="future-weather-row">
-              <h2>5-Day Forecast</h2>
-            
-        </div>
+          <div class="row" id="future-weather-row"></div>
         </div>
       </div>
     </div>
