--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <button id="clearBtn">Clear History</button>
             </div>
         </form>
+        <div id="search-history"></div>
         </div>
         <!-- Right Column: Display weather -->
         <div class="col-md-9 right-column">
